Clean ups to get master happy
This:

* fixes some pep8 issues
* adds Ryan as an author
* gets rid of the docs tox target

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = gabbi-multipart
-author = Chris Dent
+author = Chris Dent, Ryan James Spencer
 author-email = cdent@anticdent.org
 summary = multipart/form-data content handler for gabbi
 description-file = README.rst
